# claudeDesk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: 00_PRD.md  01_TASK_BREAKDOWN.md  02_UIUX_DESIGN.md  03_DEV_KICKOFF.md  README.md  RELEASE.md
src/: alias.rs  config.rs  data.rs  domain.rs  facet.rs  health.rs  lib.rs  main.rs  parser.rs  preview.rs  service.rs  trash.rs
src/ui/: facet_view.rs  help.rs  layout.rs  list.rs  mod.rs  modal.rs  preview.rs  settings.rs  theme.rs  time.rs  trash_view.rs
tests/: alias_integration.rs  parser_integration.rs  preview_integration.rs  trash_integration.rs
tests/fixtures/: block_array_content.jsonl  corrupted_lines.jsonl  cwd_meta_only.jsonl  emoji_and_unicode.jsonl  large_single_line.jsonl  no_user_lines.jsonl  normal_with_meta.jsonl  null_content_fallback.jsonl  over_scan_limit.jsonl  preview_multiturn.jsonl  surrogate.jsonl
