[package]
name = "claudedesk"
version = "0.12.0"
edition = "2021"
description = "Claude Code session manager TUI"
license = "MIT"
repository = "https://github.com/Qnd1101/claudeDesk"

[[bin]]
name = "claudedesk"
path = "src/main.rs"

[lib]
name = "claudedesk"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
unicode-width = "0.2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
